mudanças feitas