@@ -6,14 +6,13 @@ import org.springframework.core.io.UrlResource;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class FileDownloadUtil {
 
     private Path foundFile;
 
     public Resource getFileAsResource(String downloadDir, String fileName) throws IOException {
-        Path path = Paths.get(downloadDir);
+        Path path = Path.of(downloadDir);
         Files.list(path).forEach(file -> {
             if (file.getFileName().toString().equals(fileName)) {
                 foundFile = file;
